# AutoIt-Lexer

./: .gitattributes  .gitignore  CMakeLists.txt  Changelog.md  README.md  cpp.hint  premake5.lua
.github/workflows/: release-torii-labs.yml
Lexer/: au3lexer.cpp  au3lexer.h
Torii.Labs/: Assets.rc  Assets.rc.in  CMakeLists.txt  Version.rc.in  resource.h
Torii.Labs/src/: AutoItSyntax.cpp  AutoItSyntax.h  EditorServices.cpp  EditorServices.h  EditorState.h  EditorUi.cpp  EditorUi.h  HotkeyManager.cpp  HotkeyManager.h  IconResources.h  SymbolAnalysis.cpp  SymbolAnalysis.h  Version.h.in  main.cpp
Torii.Labs/src/imgui_widgets/: ConsoleWidget.cpp  ConsoleWidget.h  SocialLinkWidgets.cpp  SocialLinkWidgets.h  TextEditor.cpp  TextEditor.h
Torii.Labs/src/settings/: ProjectSettingsFile.cpp  ProjectSettingsFile.h  SettingFile.cpp  SettingFile.h  ShortcutSettingsFile.cpp  ShortcutSettingsFile.h  UserSettingsFile.cpp  UserSettingsFile.h  WorkspaceSettingsFile.cpp  WorkspaceSettingsFile.h
code/AutoItPreprocessor.Cli/: CMakeLists.txt
code/AutoItPreprocessor.Cli/src/: main.cpp
code/AutoItPreprocessor.Common/: CMakeLists.txt
code/AutoItPreprocessor.Common/include/AutoItPreprocessor/Common/: SourceDocument.h
code/AutoItPreprocessor.Common/src/: SourceDocument.cpp
code/AutoItPreprocessor.Compiler/: CMakeLists.txt
code/AutoItPreprocessor.Compiler/include/AutoItPreprocessor/Compiler/: Compiler.h  Emitter.h  IncludeResolver.h
code/AutoItPreprocessor.Compiler/src/: Compiler.cpp  CustomTokenRegistry.cpp  Emitter.cpp  IncludeResolver.cpp
code/AutoItPreprocessor.Tokenizer/: CMakeLists.txt
code/AutoItPreprocessor.Tokenizer/include/AutoItPreprocessor/Tokenizer/: Token.h
src/: Main.cpp  au3Tokenizer.cpp  au3Tokenizer.h
tests/data/: custom.tokens  local_include.au3  root.au3
tests/data/includes/: shared_include.au3
toolchains/AutoIt+.Compiler/include/AutoItPreprocessor/Compiler/: CustomTokenRegistry.h
toolchains/AutoIt+.Compiler/src/: IncludeResolver.cpp
toolchains/AutoIt+.Lexer/include/AutoItPreprocessor/Tokenizer/: Tokenizer.h
toolchains/AutoIt+.Lexer/src/: Token.cpp  Tokenizer.cpp
